# tabulaRDF

./: README.md
tabulaRDF/: pyproject.toml  test.ttl
tabulaRDF/data/: batch8_targeted_proteomics_final.csv  output.ttl  owl_output.yaml  proteomics.yml
tabulaRDF/db/: pdx.sql  test.db
tabulaRDF/tabulardf/core/: graphdf.py  owl2yaml.py
tabulaRDF/tabulardf/namespace/: namespace.py
tabulaRDF/tabulardf/visualization/: graph.py
