[tool.poetry]
name = "tabulardf"
version = "0.1.0"
description = ""
authors = ["Javier Diez Perez <javier.diez@astrazeneca.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
rdflib = "^7.0.0"
pandas = "^2.1.3"
typer = "^0.9.0"
rich = "^13.7.0"
ruamel-yaml = "^0.18.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
